[package]
name = "pahcer"
version = "0.1.0"
edition = "2021"
authors = ["terry_u16"]
description = "A tool to run tests for AtCoder Heuristic Contest (AHC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/terry-u16/pahcer"
readme = "README.md"
keywords = ["competitive", "atcoder", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
num-format = "0.4.4"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
threadpool = "1.8.1"
toml = "0.8.19"

[dev-dependencies]
mockall = "0.13.1"
