[package]
name = "pahcer"
version = "0.3.0"
edition = "2021"
authors = ["terry_u16"]
description = "A tool to run tests for AtCoder Heuristic Contest (AHC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/terry-u16/pahcer"
readme = "README.md"
keywords = ["competitive", "atcoder", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
num-format = "0.4.4"
num_cpus = "1.17.0"
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tabled = { version = "0.20.0", features = ["ansi"] }
threadpool = "1.8.1"
toml = "0.9.2"

[dev-dependencies]
mockall = "0.13.1"
